update style and poster info

--- a/_publications/2019-10-27-CQSD.md
+++ b/_publications/2019-10-27-CQSD.md
@@ -7,6 +7,7 @@ excerpt: 'With the emergence of quantum computing and quantum networks, many com
 date: 2019-10-27
 venue: 'QIP 2020'
 paperurl: 'https://arxiv.org/pdf/1910.08135'
+posterurl: '/files/cqsd_poster.pdf'
 citation: '<b>Shaokai Lin</b>, Zichuan Wang, and Lior Horesh. Communication over Continuous Quantum Secure Dialogue using Einstein-Podolsky-Rosen States. <i>arxiv:1910.08135</i>, October 2019. URL http://arxiv.org/abs/1910.08135.'
 teaser: 'CQSD.png'
 ---
