--- a/_publications/2019-10-27-CQSD.md
+++ b/_publications/2019-10-27-CQSD.md
@@ -8,7 +8,7 @@ date: 2019-10-27
 venue: 'QIP 2020'
 paperurl: 'https://arxiv.org/pdf/1910.08135'
 posterurl: '/files/cqsd_poster.pdf'
-citation: '<b>Shaokai Lin</b>, Zichuan Wang, and Lior Horesh. Communication over Continuous Quantum Secure Dialogue using Einstein-Podolsky-Rosen States. <i>arxiv:1910.08135</i>, October 2019. URL http://arxiv.org/abs/1910.08135.'
+citation: 'Shaokai Lin, Zichuan Wang, and Lior Horesh. Communication over Continuous Quantum Secure Dialogue using Einstein-Podolsky-Rosen States. <i>arxiv:1910.08135</i>, October 2019. URL http://arxiv.org/abs/1910.08135.'
 teaser: 'CQSD.png'
 ---
 
